# supabase-wrappers

./: .gitignore  README.md  TAGS  compile.sh  default.nix  mallard.cabal
.github/workflows/: portal-unit-test.yaml  webserver-unit-test.yaml
DataGuardian/go/: DbSetup.go  main.go
DataGuardian/scripts/: Dockerfile  build_docker.sh  localrun.sh  restart.sh
DataTypes/: Admin.yaml  Common.yaml  DbAnalyzer.hdtd  DbAnalyzer.yaml  DbSync.hdtd  DbSync.yaml  DbSyncCommon.yaml  Tunnel.yaml  gen  gen.sh  hdtd  web.hdtd
DataTypes/Gen.src/: .gitignore  Gen.cabal  LICENSE  TAGS  compile.sh  hie.yaml  stack.yaml
Db/: apply.sh
Db/customer/: access.sql  admincredentials.sql  connections.sql  groupmapping.sql  refs.sql  tables.sql
Db/global/: customers.sql
Db/public/: uuid.sql
DbAnalyzer/go/: .gitignore  Dockerfile  build_docker.sh  db2.go  go.mod  go.sum  jdbc.go  main.go  mongodb.go  mysql.go  oracle.go  postgres.go  push_docker.sh  (+1 more)
DbConf/: apply.sh  delete.sh  hacktonow.sh
DbGuardian/: README.md
DbGuardian/obfuscator/: Cargo.toml  obfuscator.control
DbGuardian/obfuscator/src/: defs.rs  get_words.rs  lib.rs  obf.rs  obf_bytes.rs  obf_text.rs  obf_word.rs
Utils/: README.md
app/: Config.hs
elastic/: docker-compose.yml
ktDbAnalyzerSvc/: .gitignore  build.gradle  gradle.properties  settings.gradle
misc/: README.md  commit-msg
setup/: .gitignore  README.md  aws-update.xsh  commit-msg  data.sql  db2.sh  ddb  dtunnel  get-databases.sh  init.sql  oracle.sh  pre-commit  start-db  with-aws.sh
upkeep/: upgradego.sh  upgradejs.sh
web/: web.code-workspace
(+578 files in other folders)
