[package]
name = "obfuscator"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg14"]
pg14 = ["pgx/pg14", "pgx-tests/pg14" ]
pg_test = []

[dependencies]
pgx = "^0.7.0"
aes = "^0.8.0"
lazy_static = "^1.4.0"
typenum = "^1.16.0"

[dev-dependencies]
pgx-tests = "=0.7.4"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
