[package]
name = "obfuscator"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg14"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg_test = []

[dependencies]
pgrx = "^0.11.0"
lazy_static = "^1.4.0"
aes = "*"
typenum = "^1.16.0"
rand = "*"
bloom = "*"
once_cell = "*"
regex = "*"
heapless = "*"
itertools = "*"

[dev-dependencies]
pgrx-tests = "^0.11.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
